--- a/about_us/about_us.css
+++ b/about_us/about_us.css
@@ -40,8 +40,11 @@ import 'taipei-sans-tc';
 /*background_group photo*/
 #background
 {
+    position: fixed;
     background-color: var(--background_color);
     z-index: -1;
+    width: 100%;
+    height: 100%;
 }
 #group-img
 {
