--- a/about_us/about_us.css
+++ b/about_us/about_us.css
@@ -48,9 +48,8 @@ import 'taipei-sans-tc';
 }
 #group-img
 {
-    background: url("./file/groupphoto_1.jpg") center / cover no-repeat;
     position: fixed;
-    top: 100px;
+    top: 0;
     left: 0;
     width: 100%;
     height: auto;
@@ -65,8 +64,7 @@ import 'taipei-sans-tc';
 h1
 {
     position: static;
-    /*transform: translate(-50%, -50%);*/
-    left: 50%;
+    text-align: center;
     color: var(--fontcolor_header);
     font-size: 64px;
     font-weight: 500;
@@ -80,8 +78,6 @@ p
 {
     /*要怎麼限制在一定的(左右)範圍內？*/
     position: static;
-    transform: translate(-50%, -50%);
-    left: 50%;
     text-align: center;
     
     color: var(--fontcolor_text);
@@ -102,7 +98,7 @@ p
     top: 0;
     left: 0;
     width: 100%;
-    height: 15px;
+    height: 100px;
     background-color: var(--background_color);
     border-radius: 0px 0px 50px 50px;
          /*UpLeft/UR/DR/DL*/
@@ -129,7 +125,7 @@ p
 
 .card
 {
-    background-color: #FFA511;
+    background-color: #FFA511;/*橘色*/
     height: 360px;
     width: 240px;
     left: 10%;
@@ -144,12 +140,13 @@ p
 
 .card-detail
 {
-    background-color: #AD15FF;
+    background-color: #AD15FF;/*紫色*/
     height: 30%;
     width: 100%;
     left: 50%;
     bottom: 0;
     font-size: 36px;
+    text-align: left;
     
     /*UL/UR/DR/DL*/
     border-radius: 30px 30px 30px 30px;
