--- a/about_us/about_us.css
+++ b/about_us/about_us.css
@@ -138,6 +138,16 @@ p
     z-index: 3;
 }
 
+.personal-img
+{
+    position: absolute;
+    width: 100%;
+    height: auto;
+    top: 0;
+    left: 0;
+    display: none;
+}
+
 .card-detail
 {
     background-color: #AD15FF;/*紫色*/
