fix little things

--- a/about_us/about_us.css
+++ b/about_us/about_us.css
@@ -142,7 +142,7 @@ p
 {
     background: url("./file/name1.jpg");
     position: absolute;
-    width: 100%;
+    width: 240px;
     height: auto;
     top: 0;
     left: 0;
