fix font problem

--- a/about_us/about_us.css
+++ b/about_us/about_us.css
@@ -7,6 +7,15 @@ import 'taipei-sans-tc';/*台北黑體*/
   font-family: jf-openhuninn;
   src: url(./file/"jf-openhuninn-1.1.ttf") format("opentype");
   /*src: url(https://cdn.jsdelivr.net/npm/taipei-sans-tc);*/
+  
+}
+
+@font-face
+{
+  font-family: 'jf-openhuninn';
+  src: url('./fonts/jf-openhuninn-1.1.woff') format("woff"),
+         url('./fonts/jf-openhuninn-1.1.ttf') format("truetype"),
+         url('./fonts/jf-openhuninn-1.1.eot') format("embedded-opentype");
 }
 
 
