--- a/about_us/about_us.css
+++ b/about_us/about_us.css
@@ -57,6 +57,7 @@
     height: auto;
     opacity: 1;
     z-index: 0;
+    content: url(./file/groupphoto_1.jpg); /* moved the src from html file to here */
 }
 
 /********/
@@ -96,6 +97,9 @@ p
 
 #navbar
 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     position: fixed;
     top: 0;
     left: 0;
@@ -116,6 +120,7 @@ p
     /*top: 0px;*/
     line-height: 85px;
     color: var(--fontcolor_header);
+    margin-left: 5%;
 }
 
 /*logo*/
@@ -127,7 +132,7 @@ p
     justify-content: space-around;
     white-space:nowrap;
     list-style-type:none;
-    
+    margin-right: 5%;
 }
 
 
@@ -140,6 +145,7 @@ p
     white-space: normal;
     word-break: break-all;
     word-wrap: break-word;
+    font-size: 36px;
 }
 
 /***********/
@@ -160,9 +166,25 @@ p
     /*UL/UR/DR/DL*/
     border-radius: 50px 50px 0px 0px;
     width: 100%;
-    top: 500px;
+    top: 80%;
     z-index: 1;
 }
+
+#flex-column
+{
+    display:flex;
+    flex-direction: column;
+}
+
+.flex-row
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 3%;
+    margin: 3% 0 3% 0;
+}
+
 
 .card
 {
@@ -182,7 +204,7 @@ p
 #img-cards .personal-img
 {
     background: url("./file/name1.jpg");
-    position: absolute;
+    position: relative;
     width: 240px;
     height: auto;
     top: 0;
@@ -197,6 +219,7 @@ p
     width: 100%;
     left: 50%;
     top: 50%;
+    bottom: 0px;
     
     /*UL/UR/DR/DL*/
     border-radius: 30px 30px 30px 30px;
@@ -211,3 +234,13 @@ p
     color: var(--fontcolor_header);
 }
 
+.personal-name
+{
+    font-size: 36px;
+    line-height: 1em;
+}
+
+.description
+{
+    font-size: 18px; /* the font size is soooo weird */
+}
