--- a/about_us/about_us.css
+++ b/about_us/about_us.css
@@ -2,7 +2,7 @@
 /*font style*/
 /************/
 
-/*不確定為什麼，不可以有import 字體，下面這個字體會出不來*/
+/*不確定為什麼，前面import 台北黑體會error，下面這個字體會出不來*/
 @font-face
 {
   font-family: jf-openhuninn;
@@ -105,7 +105,7 @@ p
     top: 0;
     left: 0;
     width: 100%;
-    height: 100px;
+    height: 90px;
     background-color: var(--background_color);
     border-radius: 0px 0px 50px 50px;
          /*UpLeft/UR/DR/DL*/
@@ -121,7 +121,7 @@ p
     /*top: 0px;*/
     line-height: 85px;
     color: var(--fontcolor_header);
-    margin-left: 5%;
+    margin-left: 3.5%;
 }
 
 /*logo*/
@@ -129,24 +129,25 @@ p
 /*button*/
 #navbar ul
 {
-    display:flex;
+    display: flex;
     justify-content: space-around;
-    white-space:nowrap;
-    list-style-type:none;
-    margin-right: 5%;
+    white-space: nowrap;
+    list-style-type: none;
+    margin-right: 2%;
 }
 
 
 #navbar li
 {
     display: block;
-    float:right;
-    margin:32px;
+    float: right;
+    margin: 32px;
     overflow: left;
     white-space: normal;
     word-break: break-all;
     word-wrap: break-word;
-    font-size: 36px;
+    /*font-size: 36px;*/
+    font-size: 2.5em;
 }
 
 /***********/
@@ -156,7 +157,7 @@ p
 #gap1
 {
     width: 100%;
-    height: 5px;
+    height: 0px;
 }
 
 #img-cards
@@ -167,7 +168,7 @@ p
     /*UL/UR/DR/DL*/
     border-radius: 50px 50px 0px 0px;
     width: 100%;
-    top: 80%;
+    top: 55vw;
     z-index: 1;
 }
 
