--- a/about_us/about_us.css
+++ b/about_us/about_us.css
@@ -16,14 +16,14 @@
 {
     --background_color: #FFFFFF;
     --background_color_card: #E8E8E8;
-    --fontcolor_header: #181818;
+    --fontcolor_header: #000000;
     --fontcolor_text: #000000;
     --font-family-header: "jf-openhuninn";
-    --font-style-header: none;
+    --font-style-header: normal;
     --font-family-text: "jf-openhuninn";
-    --font-style-text: none;
+    --font-style-text: normal;
     --font-family-card: "jf-openhuninn";
-    --font-style-card: none;
+    --font-style-card: normal;
 }
 
 
@@ -51,6 +51,8 @@
 #group-img
 {
     position: fixed;
+    transform: translate(0, -5%);
+    /*top: 0;*/
     top: 0;
     left: 0;
     width: 100%;
@@ -70,7 +72,7 @@ h1
     text-align: center;
     color: var(--fontcolor_header);
     font-size: 64px;
-    font-weight: 500;
+    font-weight: normal;
     font-family: var(--font-family-header);
     font-style: var(--font-style-header);
     text-decoration: none;
@@ -91,6 +93,12 @@ p
     
     text-decoration: none;
 }
+
+#slogan
+{
+    margin: 0 30% 0 30%;
+}
+
 /*********/
 /*nav_bar*/
 /*********/
@@ -109,11 +117,12 @@ p
     background-color: var(--background_color);
     border-radius: 0px 0px 50px 50px;
          /*UpLeft/UR/DR/DL*/
-    opacity: 0.45;
+    opacity: 0.8;
     z-index: 1;
 }
 
-#title{
+#title
+{
     font-family: var(--font-family-header);
     font-style: var(--font-style-header);
     font-weight: 500;
@@ -160,15 +169,20 @@ p
     height: 0px;
 }
 
+#gap2
+{
+    width: 100%;
+    height: 100px;
+}
+
 #img-cards
 {
-    
     position: absolute;
-    background-color: green;
+    background-color: white;
     /*UL/UR/DR/DL*/
     border-radius: 50px 50px 0px 0px;
     width: 100%;
-    top: 55vw;
+    top: 50vw;
     z-index: 1;
 }
 
@@ -176,6 +190,7 @@ p
 {
     display:flex;
     flex-direction: column;
+    margin: 0 10% 0 10%;
 }
 
 .flex-row
@@ -185,49 +200,65 @@ p
     justify-content: center;
     flex-wrap: wrap;
     gap: 3%;
-    margin: 3% 0 3% 0;
+    margin: 1.5% 0 1.5% 0;
 }
 
 
 .card
 {
-    background-color: #FFA511;/*橘色*/
-    height: 360px;
-    width: 240px;
-    left: 10%;
-    bottom: 0;
+    position: relative;
+    background-color: #A5A5A5;
+    height: 300px;
+    width: 193px;
     font-size: 36px;
     
     /*UL/UR/DR/DL*/
     border-radius: 30px 30px 30px 30px;
     opacity: 1;
+    z-index: 2;
+}
+
+#personal_pic1
+{
+    position: absolute; /*父空間的position不能為static*/
+    transform: translate(-50%, 0);
+    bottom: 0;
+    left: 50%;
+    border-radius: 30px 30px 30px 30px;
+    width: 100%;
+    height: 100%;
+    
+    content: url('./file/name1.jpg');
     z-index: 3;
 }
 
-#img-cards .personal-img
+.card-bg
 {
-    background: url("./file/name1.jpg");
-    position: relative;
-    width: 240px;
-    height: auto;
-    top: 0;
+    position: absolute;
+    height: 28%;
+    width: 100%;
     left: 0;
-    display: none;
+    bottom: 0;
+    
+    background-color: #FAAD95;
+    border-radius: 30px 30px 30px 30px;
+    opacity: 0.95;
+    z-index: 4;
 }
 
 .card-detail
 {
-    background-color: #AD15FF;/*紫色*/
-    height: 30%;
+    position: absolute;
+    transform: translate(5%, 0);
+    height: 28%;
     width: 100%;
-    left: 50%;
-    top: 50%;
-    bottom: 0px;
+    left: 0;
+    bottom: 0;
     
     /*UL/UR/DR/DL*/
     border-radius: 30px 30px 30px 30px;
-    opacity: 0.7;
-    z-index: 4;
+    opacity: 1;
+    z-index: 5;
 }
 
 .card-detail *
