--- a/about_us/about_us.css
+++ b/about_us/about_us.css
@@ -258,15 +258,9 @@ p
     bottom: 0;
     
     /*UL/UR/DR/DL*/
-<<<<<<< HEAD
-    border-radius: 30px 30px 30px 30px;
-    opacity: 1;
-    z-index: 5;
-=======
     border-radius: 1.5vw;
     opacity: 0.7;
     z-index: 4;
->>>>>>> 960cdbff3fdbbcf5caec81d48197d612d453287f
 }
 
 .card-detail *
@@ -280,6 +274,7 @@ p
 {
     text-align: left;
     padding-left: 5%;
+    margin: 2% 0;
 }
 
 .personal-name
