--- a/about_us/about_us.css
+++ b/about_us/about_us.css
@@ -181,7 +181,7 @@ a
 #gap2
 {
     width: 100%;
-    height: 100px;
+    height: 5%;
 }
 
 #img-cards
@@ -193,6 +193,12 @@ a
     width: 100%;
     top: 87%;
     z-index: 1;
+}
+
+#img-cards h1
+{
+    /* about us words*/
+    padding-bottom: 3%;
 }
 
 #flex-column
