--- a/about_us/about_us.css
+++ b/about_us/about_us.css
@@ -148,7 +148,7 @@ a
     display: flex;
     justify-content: space-around;
     align-items: center;
-    gap: 10%;
+    /*gap: 10%;*/
     white-space: nowrap;
     list-style-type: none;
     margin-right: 5%;
@@ -166,6 +166,7 @@ a
     word-wrap: nowrap;
     /*font-size: 36px;*/
     font-size: 2.5vw;
+    margin-right: 10%;
 }
 
 /***********/
@@ -214,7 +215,7 @@ a
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 3%;
+    /*gap: 3%;*/
     margin: 1.5% 0 1.5% 0;
 }
 
@@ -231,6 +232,7 @@ a
     border-radius: 1.5vw;
     opacity: 1;
     z-index: 2;
+    margin-right: 3%;
 }
 
 #personal_pic1
