--- a/about_us/about_us.css
+++ b/about_us/about_us.css
@@ -45,11 +45,13 @@
 #background
 {
     position: fixed;
-    background-color: var(--background_color);
+    background-color: #EEEEEE;
     z-index: -1;
     width: 100%;
     height: 100%;
+    opacity: 1;
 }
+
 #group-img
 {
     position: fixed;
