--- a/about_us/about_us.css
+++ b/about_us/about_us.css
@@ -121,7 +121,7 @@ a
     top: 0;
     left: 0;
     width: 100%;
-    height: 105px;
+    height: 5.2vw;
     background-color: var(--background_color);
     border-radius: 0px 0px 4vw 4vw;
          /*UpLeft/UR/DR/DL*/
@@ -136,7 +136,7 @@ a
     font-weight: 250;
     font-size: 4.5vw;
     /*top: 0px;*/
-    line-height: 105px;
+    line-height: 5.2vw;
     color: var(--fontcolor_header);
     margin-left: 3.5%;
 }
@@ -309,11 +309,21 @@ a
     /* display on phone */
     #group-img
     {
-        top: 105px;
+        top: 5.2vw;
     }
 
     #img-cards
     {
-        top: 63%;
+        top: 35%;
+    }
+
+    .card
+    {
+        margin-bottom: 3%;
+    }
+
+    .flex-row
+    {
+        margin: 0;
     }
 }
