--- a/about_us/about_us.css
+++ b/about_us/about_us.css
@@ -91,8 +91,8 @@ p
     color: var(--fontcolor_text);
     font-size: 18px;
     font-weight: 500;
-    font-family: var(--font-family-header);
-    font-style: var(--font-style-header);
+    font-family: var(--font-family-text);
+    font-style: var(--font-style-text);
     
     text-decoration: none;
 }
@@ -167,6 +167,8 @@ a
     word-wrap: nowrap;
     /*font-size: 36px;*/
     font-size: 2.5vw;
+    font-family: var(--font-family-text);
+    font-style: var(--font-style-text);
     margin-right: 10%;
 }
 
