--- a/about_us/about_us.css
+++ b/about_us/about_us.css
@@ -117,7 +117,7 @@ a
 
 #slogan
 {
-    margin: 0 30% 0 30%;
+    margin: 0 32vw 0 32vw;
 }
 
 /*********/
@@ -202,7 +202,7 @@ a
 #gap3
 {
     width: 100%;
-    height: 5vh;
+    height: 1vh;
 }
 
 #img-cards
