--- a/about_us/about_us.css
+++ b/about_us/about_us.css
@@ -196,13 +196,13 @@ a
 #gap2
 {
     width: 100%;
-    height: 10vh;
+    height: 7vh;
 }
 
 #gap3
 {
     width: 100%;
-    height: 1vh;
+    height: 3vh;
 }
 
 #img-cards
@@ -321,7 +321,8 @@ a
 
 .description
 {
-    font-size: 18px; /* the font size is soooo weird */
+    font-size: 18px;
+    padding-right: 10%;
 }
 
 @media only screen and (max-width: 768px) {
