--- a/about_us/about_us.css
+++ b/about_us/about_us.css
@@ -332,6 +332,11 @@ a
         top: 5.2vw;
     }
 
+    #slogan
+    {
+    margin: 0 14vw;
+    }
+
     #img-cards
     {
         top: 35%;
@@ -339,11 +344,12 @@ a
 
     .card
     {
-        margin-bottom: 3%;
+        margin-bottom: 5%;
     }
 
     .flex-row
     {
         margin: 0;
     }
+
 }
