--- a/about_us/app/about_us.pug
+++ b/about_us/app/about_us.pug
@@ -2,7 +2,7 @@ doctype html
 html                                                          
   head                                                 
     title preprocessor exercise   
-    link(href="./app.css",rel="stylesheet",type="text/css")           
+    link(href="../app/about_us.sass",rel="stylesheet",type="text/css")           
     style(type='text/css').                                                           
       .firstPug  {                                                                   
         color: grey;                                                              
