modify linkherf in about_us.pug that links to .css

--- a/about_us/app/about_us.pug
+++ b/about_us/app/about_us.pug
@@ -4,7 +4,7 @@ html
     meta(charset="utf-8")
     meta(content="width=device-width, initial-scale=1", name="viewport")                 
     title CONNECT 
-    link(href="../app/about_us.sass",rel="stylesheet",type="text/css")  
+    link(href="../dist/about_us.css",rel="stylesheet",type="text/css")  
 
   header
     #nabar 
