--- a/about_us/app/about_us.sass
+++ b/about_us/app/about_us.sass
@@ -138,7 +138,7 @@ a
     align-items: center
 
     /*gap: 10%;
-    white-space: nowrap
+    white-space: nowrasp
     list-style-type: none
     margin-right: 5%
 
@@ -204,7 +204,7 @@ a
 
 .card
   position: relative
-  background-color: #F5F5F5
+  background-color: $F5F5F5
   height: 300px
   width: 193px
   font-size: 36px
