origin/master merge

--- a/about_us/app/about_us.sass
+++ b/about_us/app/about_us.sass
@@ -253,7 +253,7 @@ a
   *
     font-size: 36px
     text-align: left
-    color: var(--fontcolor_header)
+    bgcolor: var(--fontcolor_header)
 
   p
     text-align: left
