--- a/static/sass/about_us.sass
+++ b/static/sass/about_us.sass
@@ -7,7 +7,7 @@
 /*不確定為什麼，前面import 台北黑體會error，下面這個字體會出不來
 @font-face
   font-family: jf-openhuninn
-  src: url('./fonts/jf-openhuninn-1.1.woff') format("woff")
+  src: url('../fonts/jf-openhuninn-1.1.woff') format("woff")
 
   /*chrome, safari
   /*url('./fonts/jf-openhuninn-1.1.eot') format("embedded-opentype");
