--- a/about_us/app/about_us.pug
+++ b/about_us/app/about_us.pug
@@ -4,10 +4,10 @@ html
     meta(charset="utf-8")
     meta(content="width=device-width, initial-scale=1", name="viewport")                 
     title CONNECT 
-    link(href="../app/about_us.sass",rel="stylesheet",type="text/css")  
+    link(href="../app/about_us.sass",rel="stylesheet",type="text/sass")  
 
   header
-    #nabar 
+    #navbar 
       #title CONNECT.
 
       ul
@@ -20,7 +20,7 @@ html
 
   body
     #background
-    #gourp-img(src = "../file/groupphoto_2.png")
+    img#group-img(src = "../file/groupphoto_2.png")
     #about_details 
     #img-cards
 
