--- a/about_us/app/about_us.sass
+++ b/about_us/app/about_us.sass
@@ -23,18 +23,18 @@
    *optional：此模式最為特別，會依照使用者的網路狀況，當網路速度太慢時，則不加載字型，以預設的字型為主。
 
 \:root
-  --background_color:#FFFFFF
-  --background_color_card:#E8E8E8
-  --fontcolor-navbarbutton:#000000
-  --fontcolor_header:#000000
-  --fontcolor_text:#000000
-  --color-main:#FAAD95
-  --font-family-header:"jf-openhuninn", "Tahoma", "Arial"
-  --font-style-header:normal
-  --font-family-text:"jf-openhuninn", "Tahoma", "Arial"
-  --font-style-text:normal
-  --font-family-card:"jf-openhuninn", "Tahoma", "Arial"
-  --font-style-card:normal
+  --background_color: #FFFFFF
+  --background_color_card: #E8E8E8
+  --fontcolor-navbarbutton: #000000
+  --fontcolor_header: #000000
+  --fontcolor_text: #000000
+  --color-main: #FAAD95
+  --font-family-header: "jf-openhuninn", "Tahoma", "Arial"
+  --font-style-header: normal
+  --font-family-text: "jf-openhuninn", "Tahoma", "Arial"
+  --font-style-text: normal
+  --font-family-card: "jf-openhuninn", "Tahoma", "Arial"
+  --font-style-card: normal
 
 /************
 /*entire area
@@ -204,7 +204,7 @@ a
 
 .card
   position: relative
-  background-color: $F5F5F5
+  background-color: #F5F5F5
   height: 300px
   width: 193px
   font-size: 36px
