sass:bg-color/group_img/typo

--- a/about_us/app/about_us.pug
+++ b/about_us/app/about_us.pug
@@ -38,7 +38,7 @@ html
               p.personal-name 張仲喆
               p.description 工程師
               div(style = "display: none")
-                - for (let i = 0; i < 3; i++)
+                - for (var i = 0; i < 3; i++)
                   br
                 p.description 技能：c, c++, lr
                 p.description 系所：電機系111
@@ -51,7 +51,7 @@ html
               p.personal-name 蔡孟芩
               p.description 設計師
               div(style = "display: none")
-                - for (let i = 0; i < 2; i++)
+                - for (var i = 0; i < 2; i++)
                   br
                 p.description 技能：英文, 德文, 翻譯
                 p.description 系所：外文系110
@@ -64,7 +64,7 @@ html
               p.personal-name 陳亮州
               p.description 工程師
               div(style = "display: none")
-                - for (let i = 0; i < 3; i++)
+                - for (var i = 0; i < 3; i++)
                   br
                 p.description 技能：Java, C, C++, Python
                 p.description 系所：電機系111
@@ -77,7 +77,7 @@ html
               p.personal-name 鄭有希
               p.description 設計師
               div(style = "display: none")
-                - for (let i = 0; i < 3; i++)
+                - for (var i = 0; i < 3; i++)
                   br
                 p.description 技能：ps, ai, pr, solidworks
                 p.description 系所：工設110
@@ -91,7 +91,7 @@ html
               p.personal-name 鄭价閎
               p.description 工程師
               div(style = "display: none")
-                - for (let i = 0; i < 3; i++)
+                - for (var i = 0; i < 3; i++)
                   br
                 p.description 技能：Java, C
                 p.description 系所：電機系111
@@ -104,7 +104,7 @@ html
               p.personal-name 蕭孟恩
               p.description 設計師
               div(style = "display: none")
-                - for (let i = 0; i < 3; i++)
+                - for (var i = 0; i < 3; i++)
                   br
                 p.description 技能：Ai, ID, Miro, Figma
                 p.description 系所：不分系110
@@ -117,7 +117,7 @@ html
               p.personal-name 林雯琪
               p.description 工程師
               div(style = "display: none")
-                - for (let i = 0; i < 3; i++)
+                - for (var i = 0; i < 3; i++)
                   br
                 p.description 技能：C++, Python
                 p.description 系所：電機系111
