--- a/static/sass/about_us.css
+++ b/static/sass/about_us.css
@@ -8,7 +8,7 @@
 /*不確定為什麼，前面import 台北黑體會error，下面這個字體會出不來 */
 @font-face {
   font-family: jf-openhuninn;
-  src: url("./fonts/jf-openhuninn-1.1.woff") format("woff");
+  src: url("/static/fonts/jf-openhuninn-1.1.woff") format("woff");
   /*chrome, safari */
   /*url('./fonts/jf-openhuninn-1.1.eot') format("embedded-opentype"); */
   font-display: auto;
