--- a/about_us/app/about_us.pug
+++ b/about_us/app/about_us.pug
@@ -4,7 +4,7 @@ html
     meta(charset="utf-8")
     meta(content="width=device-width, initial-scale=1", name="viewport")                 
     title CONNECT 
-    link(href="../app/about_us.sass",rel="stylesheet",type="text/sass")  
+    link(href="./about_us.css",rel="stylesheet",type="text/css")  
 
   header
     #navbar 
@@ -38,7 +38,7 @@ html
               p.personal-name 張仲喆
               p.description 工程師
               div(style = "display: none")
-                - for (var i = 0; i < 3; i++)
+                - for (let i = 0; i < 2; i++)
                   br
                 p.description 技能：c, c++, lr
                 p.description 系所：電機系111
@@ -51,8 +51,7 @@ html
               p.personal-name 蔡孟芩
               p.description 設計師
               div(style = "display: none")
-                - for (var i = 0; i < 2; i++)
-                  br
+                br
                 p.description 技能：英文, 德文, 翻譯
                 p.description 系所：外文系110
                 p.description 興趣：學習語言, 寫詞編曲, 烘焙
@@ -64,8 +63,7 @@ html
               p.personal-name 陳亮州
               p.description 工程師
               div(style = "display: none")
-                - for (var i = 0; i < 3; i++)
-                  br
+                br
                 p.description 技能：Java, C, C++, Python
                 p.description 系所：電機系111
                 p.description 興趣：聽音樂, 看電影, 打code
@@ -77,8 +75,7 @@ html
               p.personal-name 鄭有希
               p.description 設計師
               div(style = "display: none")
-                - for (var i = 0; i < 3; i++)
-                  br
+                br
                 p.description 技能：ps, ai, pr, solidworks
                 p.description 系所：工設110
                 p.description 興趣：看小說, 打排球, 彈吉他
@@ -91,7 +88,7 @@ html
               p.personal-name 鄭价閎
               p.description 工程師
               div(style = "display: none")
-                - for (var i = 0; i < 3; i++)
+                - for (let i = 0; i < 2; i++)
                   br
                 p.description 技能：Java, C
                 p.description 系所：電機系111
@@ -104,8 +101,7 @@ html
               p.personal-name 蕭孟恩
               p.description 設計師
               div(style = "display: none")
-                - for (var i = 0; i < 3; i++)
-                  br
+                br
                 p.description 技能：Ai, ID, Miro, Figma
                 p.description 系所：不分系110
                 p.description 興趣：科幻電影, 獨立音樂
@@ -117,7 +113,7 @@ html
               p.personal-name 林雯琪
               p.description 工程師
               div(style = "display: none")
-                - for (var i = 0; i < 3; i++)
+                - for (let i = 0; i < 2; i++)
                   br
                 p.description 技能：C++, Python
                 p.description 系所：電機系111
