--- a/about_us/app/about_us.sass
+++ b/about_us/app/about_us.sass
@@ -6,21 +6,12 @@
 /*font style
 /***********
 
-/*不確定為什麼，前面import 台北黑體會error，下面這個字體會出不來
 @font-face
   font-family: jf-openhuninn
-  src: url('./fonts/jf-openhuninn-1.1.woff') format("woff")
+  src: url('../fonts/jf-openhuninn-1.1.woff') format("woff")
 
-  /*chrome, safari
-  /*url('./fonts/jf-openhuninn-1.1.eot') format("embedded-opentype");
   font-display: auto
 
-  /*
-   *auto(default)：預設值，與block一樣，當載入完時，文字才顯示。
-   *block：當文字加載完畢後，將當前的文字替換過去。
-   *swap：邊載入時，文字套用。
-   *allback：一開始先顯示預設字型，當字型載入完畢後，再一次替換，但加載時間過長時(3秒為限)，則會以預設字型文字，則不再加載。
-   *optional：此模式最為特別，會依照使用者的網路狀況，當網路速度太慢時，則不加載字型，以預設的字型為主。
 
 \:root
   --background_color: #FFFFFF
@@ -90,9 +81,11 @@ p
   font-family: var(--font-family-text)
   font-style: var(--font-style-text)
   text-decoration: none
+  line-height: 1.4825em
 
 a
   color: var(--fontcolor_header)
+
 
 #slogan
   margin: 0 32vw 0 32vw
@@ -221,7 +214,7 @@ a
   width: 100%
   left: 0
   bottom: 0
-  color: var(--color-main)
+  background-color: var(--color-main)
   border-radius: 1.5vw
   opacity: 0.95
   z-index: 4
@@ -254,7 +247,7 @@ a
   *
     font-size: 36px
     text-align: left
-    bgcolor: var(--fontcolor_header)
+    color: var(--fontcolor_header)
 
   p
     text-align: left
