--- a/templates/about_us.pug
+++ b/templates/about_us.pug
@@ -40,10 +40,7 @@ html
             .card-detail 
               p.personal-name 張仲喆
               p.description 工程師
-              div(style = "display: none")
-                {% for i in '012'|make_list %}
-                br
-                {% endfor %}
+              .hidden-description(style = "display: none")
                 p.description 技能：c, c++, lr
                 p.description 系所：電機系111
                 p.description 興趣：攝影, 打桌球, 打code, 彈吉他
@@ -55,10 +52,7 @@ html
             .card-detail 
               p.personal-name 蔡孟芩
               p.description 設計師
-              div(style = "display: none")
-                {% for i in '01'|make_list %}
-                br
-                {% endfor %}
+              .hidden-description(style = "display: none")
                 p.description 技能：英文, 德文, 翻譯
                 p.description 系所：外文系110
                 p.description 興趣：學習語言, 寫詞編曲, 烘焙
@@ -70,10 +64,7 @@ html
             .card-detail 
               p.personal-name 陳亮州
               p.description 工程師
-              div(style = "display: none")
-                {% for i in '012'|make_list %}
-                br
-                {% endfor %}
+              .hidden-description(style = "display: none")
                 p.description 技能：Java, C, C++, Python
                 p.description 系所：電機系111
                 p.description 興趣：聽音樂, 看電影, 打code
@@ -85,10 +76,7 @@ html
             .card-detail 
               p.personal-name 鄭有希
               p.description 設計師
-              div(style = "display: none")
-                {% for i in '012'|make_list %}
-                br
-                {% endfor %}
+              .hidden-description(style = "display: none")
                 p.description 技能：ps, ai, pr, solidworks
                 p.description 系所：工設110
                 p.description 興趣：看小說, 打排球, 彈吉他
@@ -101,10 +89,7 @@ html
             .card-detail 
               p.personal-name 鄭价閎
               p.description 工程師
-              div(style = "display: none")
-                {% for i in '012'|make_list %}
-                br
-                {% endfor %}
+              .hidden-description(style = "display: none")
                 p.description 技能：Java, C
                 p.description 系所：電機系111
                 p.description 興趣：球類, 手遊, 漫畫, 魔方
@@ -116,10 +101,7 @@ html
             .card-detail 
               p.personal-name 蕭孟恩
               p.description 設計師
-              div(style = "display: none")
-                {% for i in '012'|make_list %}
-                br
-                {% endfor %}
+              .hidden-description(style = "display: none")
                 p.description 技能：Ai, ID, Miro, Figma
                 p.description 系所：不分系110
                 p.description 興趣：科幻電影, 獨立音樂
@@ -131,10 +113,7 @@ html
             .card-detail 
               p.personal-name 林雯琪
               p.description 工程師
-              div(style = "display: none")
-                {% for i in '012'|make_list %}
-                br
-                {% endfor %}
+              .hidden-description(style = "display: none")
                 p.description 技能：C++, Python
                 p.description 系所：電機系111
                 p.description 興趣：聽音樂, 打遊戲
