fixed: hidden-description bottom not aligned problm

--- a/about_us/app/about_us.pug
+++ b/about_us/app/about_us.pug
@@ -37,7 +37,7 @@ html
             .card-detail 
               p.personal-name 張仲喆
               p.description 工程師
-              div(style = "display: none")
+              .hidden-description(style = "display: none")
                 - for (let i = 0; i < 2; i++)
                   br
                 p.description 技能：c, c++, lr
@@ -50,7 +50,7 @@ html
             .card-detail 
               p.personal-name 蔡孟芩
               p.description 設計師
-              div(style = "display: none")
+              .hidden-description(style = "display: none")
                 br
                 p.description 技能：英文, 德文, 翻譯
                 p.description 系所：外文系110
@@ -62,7 +62,7 @@ html
             .card-detail 
               p.personal-name 陳亮州
               p.description 工程師
-              div(style = "display: none")
+              .hidden-description(style = "display: none")
                 br
                 p.description 技能：Java, C, C++, Python
                 p.description 系所：電機系111
@@ -74,7 +74,7 @@ html
             .card-detail 
               p.personal-name 鄭有希
               p.description 設計師
-              div(style = "display: none")
+              .hidden-description(style = "display: none")
                 br
                 p.description 技能：ps, ai, pr, solidworks
                 p.description 系所：工設110
@@ -87,7 +87,7 @@ html
             .card-detail 
               p.personal-name 鄭价閎
               p.description 工程師
-              div(style = "display: none")
+              .hidden-description(style = "display: none")
                 - for (let i = 0; i < 2; i++)
                   br
                 p.description 技能：Java, C
@@ -100,7 +100,7 @@ html
             .card-detail 
               p.personal-name 蕭孟恩
               p.description 設計師
-              div(style = "display: none")
+              .hidden-description(style = "display: none")
                 br
                 p.description 技能：Ai, ID, Miro, Figma
                 p.description 系所：不分系110
@@ -112,7 +112,7 @@ html
             .card-detail 
               p.personal-name 林雯琪
               p.description 工程師
-              div(style = "display: none")
+              .hidden-description(style = "display: none")
                 - for (let i = 0; i < 2; i++)
                   br
                 p.description 技能：C++, Python
