basic login pug frames

--- a/templates/registration/login.pug
+++ b/templates/registration/login.pug
@@ -6,12 +6,38 @@ html
     meta(content="width=device-width, initial-scale=1", name="viewport")                 
     title CONNECT 
     {% load sass_tags %}
-    link(href="{% sass_src 'sass/about_us.sass' %}",rel="stylesheet",type="text/css")  
+    link(href="{% sass_src 'sass/login.sass' %}",rel="stylesheet",type="text/css")  
   {% include 'navbar.pug' %}
 
   body
+    #panel1 <!-- bubble and loging panel -->
+      #backgrounds
+        #bubbles
+          #grey-bubble1.grey-bubble 
+          #grey-bubble2.grey-bubble
+          #grey-bubble3.grey-bubble
+          #grey-bubble4.grey-bubble 
+          #white-bubble1
+        #introduction <!-- join us.. -->
+          h1 Join us now.
+          p.description introduction introduction introduction
+      
+      #login-panel
+        h1 Login 
+        hr.solid
+        p.input-description User ID
+        input.input-area(type="text")
+        p.input-description Password 
+        input.input-area(type="password")
+        p#forgot Forgot Password?
+
+        .buttons 
+          input(type="button", value="Login")
+          p or 
+          p#sign-up Sign up
+
     
-      script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
-      script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
-      script(src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js")
-      script(src="{% static 'js/login.js' %}")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
+    script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js")
+    script(src="{% static 'js/login.js' %}")
